Bug 156201 - Image in svg test file not rendered at all
Summary: Image in svg test file not rendered at all
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: bibisected, bisected, filter:svg, regression
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-07-08 12:56 UTC by steve
Modified: 2023-07-11 11:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
2023-07-08 left svg file in firefox, right svg file in LO (3.43 MB, image/png)
2023-07-08 12:57 UTC, steve
Details
test.svg (887.06 KB, image/svg+xml)
2023-07-08 13:00 UTC, steve
Details
minimal reproducer (940 bytes, image/svg+xml)
2023-07-10 10:41 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2023-07-08 12:56:42 UTC
Description:
Image in test.svg file is not shown when inserting file into Writer or Draw.

Steps to Reproduce:
1. insert test.svg into writer or draw

Actual Results:
Headline and frame with scale is showing but middle image is not rendered at all.

Expected Results:
svg should be fully rendered without missing elements.


Reproducible: Always


User Profile Reset: No

Additional Info:
macOS 13.4.1
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f7ccf955fa1138b712233628de4a73b3f845c7e
CPU threads: 8; OS: Mac OS X 13.4.1; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2023-07-08 12:57:22 UTC
Created attachment 188261 [details]
2023-07-08 left svg file in firefox, right svg file in LO
Comment 2 steve 2023-07-08 13:00:07 UTC
Created attachment 188263 [details]
test.svg
Comment 3 m_a_riosv 2023-07-08 13:54:04 UTC
Reproducible
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 77fca616e0bd79e0b405fd0b3543cf8e94e15df3
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Buovjaga 2023-07-08 14:46:55 UTC
Not dependent on Skia.

Bibisected with win64-7.6 repo to 05291e38d53e8be76b690586cff0cf4f067e918f

tdf#155814: only check parent style when it has a local css style
Comment 5 Xisco Faulí 2023-07-10 08:17:36 UTC
I'll take a look. Thanks for the report
Comment 6 Xisco Faulí 2023-07-10 10:41:46 UTC
Created attachment 188294 [details]
minimal reproducer
Comment 7 Commit Notification 2023-07-10 14:54:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3d5b5914ef56395a8ba3d4c0a2eff8a5c52046b4

tdf#156201: just check one level up in the style stack

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-07-10 17:51:35 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5784a4ad11c1dcff746c7b98520dc9e485530971

tdf#156201: just check one level up in the style stack

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 steve 2023-07-11 11:00:41 UTC
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fcbae818b793a9ee97a1b5ddc53902be7a2376f5
CPU threads: 8; OS: Mac OS X 13.4.1; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded

Verified. Kudos to Buovjaga for the bisect and Xisco for the fast fix.