tdf#156201: just check one level up in the style stack

Otherwise, the parent might also have a local css style

Change-Id: Ib6d1340045f22861aee3e526d22d014eeb2f5d38
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154248
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>